# gtdspace

./: .env.backup  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_SETUP_COMPLETE.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-reverse-relationships.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json  settings.local.json.example
.github/: dependabot.yml
.github/workflows/: build-alternative.yml.example  build.yml  ci.yml  release.yml
docs/: GTD_IMPLEMENTATION.md  README.md  action-page-template.md  agent-interface-plan.md  architecture.md  area-page-template.md  blocknote.md  build-setup.md  content-events.md  dashboard-refactor.md  data-migration.md  datetime-fields.md  design-rules.md  design-system.md  git-sync.md  goal-page-template.md  gtd-data-model.md  habit-page-template.md  habits-implementation.md  hooks.md  horizon-readme-plan.md  horizon-readme-template.md  icon-generation.md  installation.md  mac-signing-setup.md  markdown.md  mcp.md  multiselect-fields.md  project-overview.md  project-page-template.md  project-rules.md  purpose-page-template.md  release-process.md  settings.md  singleselect-fields.md  tauri.md  tech-stack.md  theming.md  user-flow.md  vision-page-template.md
docs/phases/: README.md  phase-0-setup.md  phase-1-mvp.md  phase-2-enhancement.md  phase-3-advanced.md  phase-4-polish.md  phase-5-scalability.md
docs/releases/: README.md  TEMPLATE.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.1.0.md  v2.2.0.md  v2.3.0.md  v2.3.2.md  v2.3.3.md  v2.3.4.md  v2.3.5.md  v2.3.6.md  v2.4.0.md  v2.5.0.md  v2.5.1.md  v2.6.0.md  v2.7.0.md
docs/user-support/: FAQ.md  README.md  accessibility-guide.md  getting-help.md  troubleshooting-guide.md  workflows-guide.md
scripts/: bump-version.js  icons-generate.mjs  release-notes.js  safe-release.js
spec/: 01-workspace-and-domain-model.md  02-markdown-schema.md  03-runtime-behavior.md  README.md  gtd-spec.md
src/: App.tsx  AppPhase2.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: copy-icons-temp.sh  create_minimal_ico.py  fix_icon.py  generate-icons.sh  generate_icons.py  icon.icns
src-tauri/mcp-server/: Cargo.toml
src-tauri/mcp-server/src/: main.rs
src-tauri/mcp-server/tests/: gtdspace_mcp_stdio.rs
src-tauri/src/: lib.rs  main.rs  mcp_server.rs  mcp_settings.rs  test_utils.rs
src-tauri/src/backend/: mcp_google_calendar.rs  mcp_workspace.rs  mcp_workspace_config.rs  mcp_workspace_context.rs  mcp_workspace_index.rs  mcp_workspace_markdown.rs  mod.rs
src-tauri/src/commands/: app.rs  dialogs.rs  filesystem.rs  git_commands.rs  git_sync.rs  google_calendar_commands.rs  gtd_habits.rs  gtd_habits_domain.rs  gtd_projects.rs  gtd_relationships.rs  mod.rs  search.rs  seed_data.rs  settings.rs  utils.rs  watcher.rs  workspace.rs
src-tauri/src/google_calendar/: auth.rs  cache.rs  calendar_client.rs  config_manager.rs  custom_flow_delegate.rs  mod.rs  oauth_server.rs  simple_auth.rs  storage.rs  sync.rs  token_manager.rs
src-tauri/tests/: gtdspace_mcp_stdio.rs
src/components/: Editor.tsx  EmptyState.tsx  GTDActionDialog.tsx  GTDInitDialog.tsx  GTDProjectDialog.tsx  GTDProjectList.tsx  Layout.tsx  Sidebar.tsx
src/hooks/: index.ts  use-toast.tsx  useActionsData.ts  useActionsListInsertion.ts  useCalendarData.ts  useCommands.ts  useDateTimeInsertion.ts  useErrorHandler.ts  useFileManager.ts  useFileWatcher.ts  useGTDSpace.ts  useGTDWorkspaceSidebar.ts  useGitSync.ts  useGlobalSearch.ts  useHabitScheduler.ts  useHabitTracking.ts  useHabitsHistory.ts  useHorizonListInsertion.ts  useHorizonReferencesInsertion.ts  useHorizonsRelationships.ts  (+10 more)
tests/: app.integration.spec.tsx  calendar-habits.component.spec.tsx  calendar-view.component.spec.tsx  dashboard-actions.component.spec.tsx  dashboard-activity.spec.ts  dashboard-habits.component.spec.tsx  dashboard-horizons.component.spec.tsx  dashboard-overview.component.spec.tsx  dashboard-projects.component.spec.tsx  data-migration.spec.ts  date-formatting.spec.ts  format-display-date.spec.ts  git-sync-diff-review-dialog.component.spec.tsx  gtd-action-markdown.spec.ts  gtd-dashboard.component.spec.tsx  gtd-habit-markdown.spec.ts  gtd-markdown-helpers.spec.ts  gtd-project-content.spec.ts  gtd-reference-utils.spec.ts  gtd-status.spec.ts  gtd-workspace-sidebar.component.spec.tsx  habit-history.spec.ts  habit-progress.spec.ts  horizon-config.spec.ts  horizon-readme-utils.spec.ts  horizons.spec.ts  mcp-server-settings.component.spec.tsx  metadata-extractor.spec.ts  path-utils.spec.ts  settings-validation.spec.ts  setup-vitest.ts  sidebar-event-bridge.spec.tsx  sidebar-path-classification.spec.ts  tab-runtime.persistence.test.ts  tab-runtime.state.spec.ts  tab-runtime.state.test.ts  test-infra.dom.spec.tsx  toaster.component.spec.tsx  upcoming-deadlines-card.component.spec.tsx  use-file-manager.integration.spec.tsx  (+4 more)
(+266 files in other folders)
