[package]
name = "gtdspace"
version = "0.1.0"
description = "GTD-first productivity system with integrated markdown editing"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gtdspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.7", features = [
  "devtools",
] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
notify = "6.1"
notify-debouncer-mini = "0.4"
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.10"
chrono = "0.4"
google-calendar3 = "5.0"
oauth2 = "4.4"
url = "2.5"
webbrowser = "1.0"
urlencoding = "2.1"
open = "5"
base64 = "0.22"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-rustls = "0.24"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
sha2 = "0.10"
rand = "0.8"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"
