[package]
name = "gtdspace"
version = "0.2.3"
description = "GTD-first productivity system with integrated markdown editing"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gtdspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.7", features = [
  "devtools",
] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
notify-debouncer-mini = "0.7"
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.12"
chrono = "0.4"
google-calendar3 = "5.0"
oauth2 = "5.0"
url = "2.5"
webbrowser = "1.0"
urlencoding = "2.1"
open = "5"
base64 = "0.22"
dotenv = "0.15"
uuid = { version = "1.18", features = ["v4"] }
tempfile = "3.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
sha2 = "0.10"
rand = "0.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"
