[package]
name = "gtdspace"
version = "2.0.0"
description = "GTD-first productivity system with integrated markdown editing"
authors = ["you"]
edition = "2021"
default-run = "gtdspace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gtdspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gtdspace"
path = "src/main.rs"

[[bin]]
name = "gtdspace-mcp"
path = "src/bin/gtdspace-mcp.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.7", features = [
  "devtools",
] }
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2.4"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rmcp = { version = "1.2.0", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
notify-debouncer-mini = "0.7"
lazy_static = "1.4"
once_cell = "1.21"
regex = "1.12"
chrono = "0.4"
google-calendar3 = "5.0"
oauth2 = "5.0"
url = "2.5"
webbrowser = "1.2"
urlencoding = "2.1"
open = "5"
base64 = "0.22"
dotenv = "0.15"
uuid = { version = "1.22", features = ["v4"] }
tempfile = "3.27"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
sha2 = "0.10"
rand = "0.10"
aes-gcm = { version = "0.10.3", features = ["aes", "stream"] }
pbkdf2 = "0.12"
flate2 = "1.1"
tar = "0.4.36"
walkdir = "2.5"
keyring = "2.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10"
