[package]
name = "gtdspace-mcp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
gtdspace_lib = { package = "gtdspace", path = ".." }

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27"
